<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/medium_margin">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_margin="@dimen/medium_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/vertical_guideline"
            android:contentDescription="@string/profile_image" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:text="@string/profile_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/profile_name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            style="@style/Title"
            tools:text="Name"
            app:layout_constraintTop_toBottomOf="@id/profile_name"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/profile_popularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:text="@string/profile_popularity"
            app:layout_constraintTop_toBottomOf="@id/profile_name_value"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/profile_popularity_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            style="@style/Subtitle"
            tools:text="Popularity"
            app:layout_constraintTop_toBottomOf="@id/profile_popularity"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/profile_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:text="@string/profile_id"
            app:layout_constraintTop_toBottomOf="@id/profile_popularity_value"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/profile_id_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            style="@style/Subtitle"
            tools:text="ID"
            app:layout_constraintTop_toBottomOf="@id/profile_id"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profile_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/medium_margin"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>